Se agrega script de la base de datos