@@ -6,12 +6,13 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List; // IMPORTANTE: Para que funcione List.of
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -31,10 +32,20 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             if (jwtUtils.validateToken(token)) {
                 String username = jwtUtils.extractUsername(token);
                 
+                // Creamos el permiso (ROLE_USER)
+                SimpleGrantedAuthority autoridad = new SimpleGrantedAuthority("ROLE_USER");
+
+                // Creamos la autenticación con el usuario y su permiso
                 UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-                        username, null, Collections.emptyList());
-                
+                        username, 
+                        null, 
+                        List.of(autoridad)
+                );
+
+                // Seteamos la seguridad
                 SecurityContextHolder.getContext().setAuthentication(auth);
+                
+                System.out.println("DEBUG: Token validado con éxito para: " + username);
             }
         }
 
